[package]
name = "mack"
version = "1.4.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "An opinionated, fast music organiser."
repository = "https://github.com/cdown/mack"
readme = "README.md"
keywords = ["music", "audio", "organiser", "tagging", "mp3"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.3.16", features = ["std", "derive", "help"], default-features = false }
regex = "1.9.1"
anyhow = "1.0.71"
id3 = { version = "1.7.0", default-features = false }
funcfmt = "0.3.0"
once_cell = { default-features = false, version = "1.18.0" }
cow-utils = "0.1.2"
rayon = "1.7.0"
jwalk = "0.8.1"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.147"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }
