[package]
name = "mack"
version = "1.4.1"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "An opinionated, fast music organiser."
repository = "https://github.com/cdown/mack"
readme = "README.md"
keywords = ["music", "audio", "organiser", "tagging", "mp3"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
rust-version = "1.74"

[dependencies]
clap = { version = "4.5.21", features = ["std", "derive", "help"], default-features = false }
regex = "1.11.1"
anyhow = "1.0.93"
id3 = { version = "1.15.0", default-features = false }
funcfmt = "0.3.0"
once_cell = { default-features = false, features = ["std"], version = "1.20.3" }
cow-utils = "0.1.3"
rayon = "1.10.0"
jwalk = "0.8.1"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.164"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }
